listing posts ok

--- a/src/data/posts/post-1.mdx
+++ b/src/data/posts/post-1.mdx
@@ -1,9 +1,10 @@
 ---
-title: 'Your first post using Markdown'
-publishedAt: '2021-11-28'
+title: 'Post 1'
+publishedAt: '05 de novembro de 2021'
 summary: 'Post example using markdown code.'
 avatar: 'https://avatars.githubusercontent.com/u/9868584?v=4'
 author: 'Douglas Henrique'
+subtitle: 'How to create posts using markdown file instead a CMS headless using next js + mdx'
 ---
  
 # Well done!
